feat: criação de novos testes unitarios para aumentar a cobertura